[gd_scene load_steps=4 format=3 uid="uid://bc7f1a1qdw1py"]

[ext_resource type="Script" path="res://Scripts/UI/UIVictoryScreen.gd" id="1_px5cx"]
[ext_resource type="Texture2D" uid="uid://dd4jspxygd672" path="res://Artwork/UI/button-blue_03.png" id="1_qlv53"]
[ext_resource type="FontFile" uid="uid://nod41fu6od3j" path="res://Artwork/Fonts/Pixellari.ttf" id="2_c5u15"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_px5cx")

[node name="Panel" type="Panel" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -221.0
offset_right = 196.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 31.0
offset_top = 43.0
offset_right = 366.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 80
text = "Victory!!!"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayAgainButton" type="TextureButton" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 100.06)
layout_mode = 2
texture_normal = ExtResource("1_qlv53")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/PlayAgainButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -11.5
offset_right = 41.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_c5u15")
theme_override_font_sizes/font_size = 35
text = "Play Again"

[node name="BackToMainMenuButton" type="TextureButton" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 100.06)
layout_mode = 2
texture_normal = ExtResource("1_qlv53")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/BackToMainMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -11.5
offset_right = 41.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_c5u15")
theme_override_font_sizes/font_size = 35
text = "Main Menu"

[node name="QuitButton" type="TextureButton" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(50, 100.06)
layout_mode = 2
texture_normal = ExtResource("1_qlv53")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -11.5
offset_right = 41.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_c5u15")
theme_override_font_sizes/font_size = 35
text = "Quit"

[connection signal="button_down" from="Panel/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/BackToMainMenuButton" to="." method="_on_back_to_main_menu_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
